Fix for spacing in views(more) for dataservices cards.

--- a/src/main/ngapp/src/app/dataservices/dataservices-cards/dataservice-card/dataservice-card.component.css
+++ b/src/main/ngapp/src/app/dataservices/dataservices-cards/dataservice-card/dataservice-card.component.css
@@ -49,3 +49,11 @@ a.list-pf-title.view-name {
 .views-details {
   background-color: var(--card-body-background-color);
 }
+
+.list-pf-container {
+  -ms-flex-align: start;
+  align-items: flex-start;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 3px;
+}
